# CPSWC

./: .gitignore  pyproject.toml
docs/: CPSWC_refs_README_索引.md  CPSWC_生产建设项目水土保持方案智能编制与审查平台_愿景与定位白皮书_V1.docx  DEMO_README.md  DEMO_SCRIPT.md  PRODUCT_BRIEF.md  REAL_PROJECT_INTAKE_SPEC.md  report_artifacts_implementation_notes.md  补充资料说明.md
fixtures/: investment_huizhou_f1.csv  investment_mock_huizhou.yaml
governance/: ARCHITECTURE_DECISIONS.md  CORE_CONTRACTS.yaml  DisplayNumberingPolicy_v0.yaml  INVESTMENT_FACTS_BACKFILL_CONTRACT.md  INVESTMENT_SUBSYSTEM_CONTRACT.md  PREVENTION_SYSTEM_CONTRACT.md  ProtectedBoundaryPolicy_v0.yaml  ProvenanceClassification.yaml  REPORT_ARTIFACT_CLASSIFICATION_v1.md  SAMPLE_BACKFILL_CONTRACT_v1.md
registries/: ArtifactRegistry_v0.yaml  AssuranceRegistry_v0.yaml  CalculatorRegistry_v0.yaml  FieldIdentityRegistry_v0.yaml  ObligationSet_v0.yaml  PreventionZoneTypeRegistry_v0.yaml  material_prices_v0.yaml  quota_measure_mapping_v0.yaml
samples/: disposal_highrisk_v0.json  huinan_zhigu_v0.json  huizhou_housing_v0.json  review_comments_huizhou_v0.json  shiwei_logistics_v0.json
scripts/: run_showcase_demo.sh
specs/: CPSWC_SAMPLE_Huizhou_Housing_v0.json  FieldIdentityRegistry_v0.yaml  calculator_engine.py  cpswc_runtime.py  cross_registry_lint.py  document_renderer.py  narrative_contract.py  narrative_projection.py  sample_validator.py  submission_package_builder.py  v1_reservations.yaml  workbench_renderer.py
src/cpswc/: demo.py  (+18 more)
templates/: project_intake_checklist.md  project_intake_minimal.yaml
tests/: test_investment_import.py  (+2 more)
(+69 files in other folders)
