[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cpswc"
version = "0.5.0"
description = "生产建设项目水土保持方案智能编制与审查平台"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "python-docx>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
